# ladder_localization

./: CMakeLists.txt  README.md  package.xml
ladder_meshes/: all_rungs.stl  all_rungs_6.stl  all_rungs_7.stl  all_rungs_8.stl  bottom_rung.stl  middle_rungs.stl  ship_ladder_drexel.stl  stair_rail.stl  support_rail.stl  top_rail.stl  top_rung.stl
msg/: LadderState.msg  LadderState.msg~
src/: fit_ladder.cpp
